--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>网页版千千静听</title>
+    <title>网页版音乐播放器 (仿千千静听)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
