--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>网页版音乐播放器 (仿千千静听)</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XC3WXZ10NK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XC3WXZ10NK');
+</script>
+    
 <body>
     <div class="player-container">
         <div class="title-bar">
